<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/black_shade_2"
    android:elevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTVNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/note_title"
            android:textColor="@color/white"
            android:layout_toStartOf="@id/idIVDelete"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTimeStamp"
            android:text="@string/timestamp"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:layout_toStartOf="@id/idIVDelete"
            android:layout_below="@id/idTVNoteTitle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idIVDelete"
            app:tint="@color/white"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:contentDescription="@string/delete_note"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>